--- a/Writerside/topics/WRS-1568.md
+++ b/Writerside/topics/WRS-1568.md
@@ -1,17 +1,6 @@
-# About
+# WRS-1568
 
-siarb/wrs-test-github-action@v1.0
-
-![](completion_procedure.pngq)
-
-```kotlin
-fun main() {
-    println("Hello, world!")
-}
-```
-{kotlin-runnable="true" kotlin-min-compiler-version="1.3"}
-
-## Kotlin runnable snippets
+## Kotlin runnable snippets { id="chapter-1" }
 
 We would like to transform it to a proper WRS plugin, but for now the
 syntax is supported directly, in the Markdown files.
@@ -24,4 +13,6 @@ fun main() {
     println("Hello, world!")
 }
 ```
-{kotlin-runnable="true" kotlin-min-compiler-version="1.3"}
+{ id="kotlin-runnable-1" kotlin-runnable="true" kotlin-min-compiler-version="1.3"}
+
+<dataFrameTable></dataFrameTable>
