--- a/Writerside2/topics/शुभ-प्रभात.md
+++ b/Writerside2/topics/शुभ-प्रभात.md
@@ -7,3 +7,7 @@
 [](#शुभ-परभात-2)
 
 ### शुभ प्रभात-2 {id="शुभ-परभात-2"}
+
+![Animated](animated.png){thumbnail="true"}
+
+![Animated](duck_dark.gif){thumbnail="true"}
