Docker `2.1.1963-p6759` Emiji in titles

--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -1,5 +1,12 @@
 # शुभ प्रभात 😊
 
+<p>
+:santa|type_6:
+In der folgenden Übersicht werden alle Gutschein-Kampagnen angezeigt, die in Plentymarkets aktuell angelegt sind.
+Diese sind in der Regel nach dem Code (bei Aktionsgutscheinen) oder nach dem Typen benannt. Sollte diese Liste einmal leer sein, liegt das an dem Datumsfilter.
+Um alle Gutscheine anzuzeigen, muss lediglich der Reset-Button <img src="../icons/4_5.png" width="24" height="24" /> und dann der Suchen-Button <icon src="4_5.png" width="24" height="24"/> angeklickt werden.
+</p>
+
 शुभ प्रभात
 
 ## शुभ प्रभात
