Test layout and shortcut

--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -1,5 +1,7 @@
 # शुभ प्रभात 😊
 
+<shortcut key="$Copy"></shortcut>
+
 <p>
 :santa|type_6:
 In der folgenden Übersicht werden alle Gutschein-Kampagnen angezeigt, die in Plentymarkets aktuell angelegt sind.
