--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -1,5 +1,50 @@
 # शुभ प्रभात 😊 :boy:
 
+```mermaid
+flowchart
+    id1{This is the<br>text in the box}
+    id2(This is the text<br>in the box)
+    id3([This is the text in the box])
+    id1 --> id2 --> id3
+```
+
+```mermaid
+classDiagram
+    Animal <|-- Duck
+    note for Duck "can fly\ncan swim\ncan dive\ncan help in debugging"
+```
+
+```mermaid
+flowchart TB
+
+    subgraph SETTINGS_LEVEL ["<div style='margin: 5px auto; font-size: 0.8rem'>settings.gradle.kts</div>"]
+        Settings("<b>Settings</b>")
+    end
+
+    subgraph PROJECT_LEVEL ["<div style='margin: 5px auto; font-size: 0.8rem'>build.gradle.kts</div>"]
+        Platform("<b>Platform</b>")
+        Module("<b>Module</b>")
+        Migration
+        Base
+    end
+
+    Module --> Base
+    Platform --> Module & Base
+    Migration --> Platform
+
+    click Platform "#platform"
+    click Module "#module"
+    click Settings "#settings"
+    click Migration "#migration"
+    click Base "#base"
+
+    style Platform stroke-width: 3px
+    style Module stroke-width: 3px
+    style Settings stroke-width: 3px
+    style SETTINGS_LEVEL fill:transparent,stroke:#666,stroke-dasharray: 10 10
+    style PROJECT_LEVEL fill:transparent,stroke:#666,stroke-dasharray: 10 10
+```
+
 <no-index/>
 
 ```
