--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -1,5 +1,23 @@
 # शुभ प्रभात 😊 :boy:
 
+```dart
+int fibonacci(int n) {
+  if (n == 0 || n == 1) return n;
+  return fibonacci(n - 1) + fibonacci(n - 2);
+}
+
+var result = fibonacci(20);
+``` 
+
+```ASP.NET (VB)
+<%-- I break docker build :( --%>
+```
+
+```xml
+
+<%-- I build successfully :) --%>
+```
+
 ```python
 import sys
 
