Check code block inside the procedure

--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -1,5 +1,30 @@
 # शुभ प्रभात 😊 :boy:
 
+<procedure title="Configure Nginx to load balance between the two instances.">
+<step>Install Nginx
+<code-block lang="bash">
+sudo apt install nginx
+</code-block>
+</step>
+
+<step>
+Update the file <code>/etc/nginx/nginx.conf</code> to the following
+<code-block lang="nginx">
+stream {
+  server {
+    listen 6443;
+    proxy_pass stream_master_nodes;
+  }
+
+upstream stream_master_nodes {
+server IP_of_Node_1:6443;
+server IP_of_Node_2:6443;
+}
+}
+</code-block>
+</step>
+</procedure>
+
 ```dart
 int fibonacci(int n) {
   if (n == 0 || n == 1) return n;
