--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -1,5 +1,37 @@
 # शुभ प्रभात 😊 :boy:
 
+<code-block lang="yaml">
+services:
+    web:
+        image: nginx:latest
+        ports:
+            - "8080:80"
+        volumes:
+            - ./html:/usr/share/nginx/html
+        restart: always
+</code-block>
+
+```
+program FindGrade(input,output);
+    var Marks : integer;
+        Grade : char;
+begin
+    writeln('Enter Marks');
+    read(Marks);
+    case Marks of
+        0..34 : Grade := 'W';
+        35..49 : Grade := 'S';
+        50..64 : Grade := 'C';
+        65..74 : Grade := 'B';
+        75..100 : Grade := 'A';
+    else
+            writeln('Invalid Marks');
+    end;
+    if (Marks >= 0) AND (Marks <= 100) then
+        writeln('Grade is ' , Grade);
+end.
+```
+
 <procedure title="Configure Nginx to load balance between the two instances.">
 <step>Install Nginx
 <code-block lang="bash">
@@ -22,6 +54,36 @@ server IP_of_Node_2:6443;
 }
 }
 </code-block>
+</step>
+</procedure>
+
+# Setting Up K3S in High Availability
+
+<procedure title="Configure Nginx to load balance between the two instances.">
+<step>Install Nginx
+
+```Bash
+sudo apt install nginx
+```
+
+</step>
+<step>
+Update the file <code>/etc/nginx/nginx.conf</code> to the following
+
+```NGINX
+stream {
+  server {
+    listen 6443;
+    proxy_pass stream_master_nodes;
+  }
+
+upstream stream_master_nodes {
+    server IP_of_Node_1:6443;
+    server IP_of_Node_2:6443;
+    }
+}
+```
+
 </step>
 </procedure>
 
@@ -381,3 +443,4 @@ Um alle Gutscheine anzuzeigen, muss lediglich der Reset-Button <img src="../icon
 ![Animated](animated.png){thumbnail="true"}
 
 ![Animated](duck_dark.gif){thumbnail="true"}
+
