--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -1,5 +1,17 @@
 # शुभ प्रभात 😊 :boy:
 
+```mermaid
+```
+{src="seq.mermaid"}
+
+```Mermaid
+graph TD;
+    A[初始化] --> B{是否初始化成功?}
+    B -->|是| C[准备关机]
+    B -->|否| D[清除缓存]
+    D --> A
+```
+
 <code-block lang="yaml">
 services:
     web:
