--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -2,12 +2,13 @@
 
 ```mermaid
 ```
-{src="seq.mermaid"}
+
+{src="../../seq.mermaid"}
 
 ```plantuml
 ```
 
-{src="seq.puml"}
+{src="../../seq.puml"}
 
 ```Mermaid
 graph TD;
