--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -2,11 +2,30 @@
 
 ```mermaid
 ```
+
 {src="../../seq.mermaid"}
+
+```Kotlin
+```
+
+{src="../newTest.kt" id="include-file-symbol-not-empty" collapsed-title-line-number="1" include-lines="4" collapsible="
+true"}
+
+```Kotlin
+```
+
+{src="$PROJECT_DIR$/Writerside2/newTest.kt" id="include-file" collapsed-title-line-number="1" include-lines="4"
+collapsible="true"}
+
+```mermaid
+```
+
+{src="$PROJECT_DIR$/seq.mermaid"}
 
 ```plantuml
 ```
-{src="../../seq.puml"}
+
+{src="$WRS_MODULE$/../seq.puml"}
 
 ```Mermaid
 graph TD;
