--- a/Writerside2/articles/शुभ-प्रभात.md
+++ b/Writerside2/articles/शुभ-प्रभात.md
@@ -1,5 +1,13 @@
 # शुभ प्रभात 😊 :boy:
 
+<inline-frame src="https://intellij-icons.jetbrains.design" width="100%" height="500px">
+
+```java
+public static void main(String[] args) {
+
+}
+```
+
 UPDATED
 
 ```mermaid
